# MPShips

./: .gitmodules  LICENSE  README.md
mpships/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
mpships/.github/: ISSUE_TEMPLATE.md
mpships/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
mpships/src/examples/: Contribute_MPApp.ipynb
mpships/src/mpships/: __init__.py  redis_store.py  vega_graph_table.py
mpships/src/mpships/materials_graph/: __init__.py  materials_graph.py
mpships/src/mpships/mp_data_stats/: MP_data_stat.ipynb  MP_data_stats.py  README.md  __init__.py  ptable_info.py  ptable_plotly.py  requirements.txt
mpships/src/mpships/mp_data_stats/data/: count.json  count_ele_absorption.json  count_ele_bonds.json  count_ele_dielectric.json  count_ele_elasticity.json  count_ele_electronic_structure.json  count_ele_electronic_structure_bandstructure.json  count_ele_electronic_structure_dos.json  count_ele_insertion_electrodes.json  count_ele_magnetism.json  count_ele_oxidation_states.json  count_ele_piezoelectric.json  count_ele_summary.json  count_ele_thermo.json
mpships/src/mpships/mp_data_stats/data/elemental/: count_ele_ele_absorption.json  count_ele_ele_bonds.json  count_ele_ele_dielectric.json  count_ele_ele_elasticity.json  count_ele_ele_summary.json  (+8 more)
mpships/src/mpships/redox_thermo_csp/: exp_data.json  redox_thermo_csp.py  redox_utils.py  redox_views.py
mpships/src/mpships/redox_thermo_csp/assets/: tooltip.js
mpships/tests/: __init__.py  test_mpships.py
