[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpships"
version = "0.1.0"
description = "Contribute apps to MP"
readme = "README.rst"
authors = [
  {name = "Ruoxi Yang", email = "yangroxie@gmail.com"}
]
maintainers = [
  {name = "Ruoxi Yang", email = "yangroxie@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "altair",
    "fakeredis",
    "dash_vega_components",
    "fastparquet"
]
[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/yang-ruoxi/mpships/issues"
changelog = "https://github.com/yang-ruoxi/mpships/blob/master/changelog.md"
homepage = "https://github.com/yang-ruoxi/mpships"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

